fix symptom filter dropdown overflow being hidden
- root container has position: fixed which casuses this

--- a/app/app.css
+++ b/app/app.css
@@ -51,6 +51,8 @@ body {
 .dropdown-menu {
   color: #EEEEEE;
   background-color: #575E7E;
+  height: 600px;
+  overflow: scroll;
 }
 
 .dropdown-header {
